# smote_cd

./: Dataset generation example.ipynb  LICENSE.txt  README.md  README.rst  Undersampling example.ipynb  dataset_generation.py  pyproject.toml  setup.py  smote_cd.py
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/guide/: dataset_generation_guide.rst  index.rst  intro.rst  oversampling.rst  undersampling.rst
docs/refs/: algos.rst  dataset_generation.rst  index.rst
examples/: Dataset generation example.ipynb  Undersampling example.ipynb  oversampling_on_synthetic_data.py  synthetic_dataset_creation.py  undersampling_on_synthetic_data.py
paper data/: .RData  Redaction - Maupiti dataset.ipynb  Redaction - Performances evaluation 4 classes comparison creation.ipynb  Redaction - Tecator dataset.ipynb  dirichletReg.R  performances_evaluation.py
paper data/data/: maupiti_X_for_smote.npy  maupiti_Y_for_smote.npy
smote_cd/: __init__.py  dataset_generation.py  main.py  setup.py  smote_cd.py
